--- a/Lab2/VCPP_Scientific_Calculator/VCPP_Scientific_Calculator/VCPP_Scientific_Calculator.vcxproj
+++ b/Lab2/VCPP_Scientific_Calculator/VCPP_Scientific_Calculator/VCPP_Scientific_Calculator.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="MyForm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Header.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
